Change checkbox check color, fix table rounded corners bleeding corners

--- a/src/Checkbox/style/Checkbox.module.scss
+++ b/src/Checkbox/style/Checkbox.module.scss
@@ -34,7 +34,7 @@
 
     &:checked::before {
       clip-path: polygon(14% 44%, 0 65%, 50% 100%, 100% 16%, 80% 0%, 43% 62%);
-      box-shadow: inset 1em 1em var(--color-input-background);
+      box-shadow: inset 1em 1em var(--color-text-on-primary);
     }
 
     &:not(:disabled) {
